fix(install): Improve error handling and accessibility

--- a/install/templates/base.html.twig
+++ b/install/templates/base.html.twig
@@ -15,7 +15,7 @@
             <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
                 <a class="py-4 d-flex align-items-center my-2 my-lg-0 me-lg-auto text-black text-decoration-none"
                    href="index.php">
-                    <img class="me-2" src="../assets/logo.png" height="32">
+                    <img class="me-2" src="../assets/logo.png" height="32" alt="Poweradmin">
                     <span class="fs-4">Poweradmin</span>
                 </a>
                 <h5 class="text-secondary">{% trans %}Installation step{% endtrans %} {{ current_step }}</h5>
