fix(wording): Clarify database user purpose in installation step 4, relates to #587

--- a/install/templates/step4.html.twig
+++ b/install/templates/step4.html.twig
@@ -15,7 +15,7 @@
                     <input id="pa_db_user" class="form-control form-control-sm" type="text" name="pa_db_user" value="" required>
                     <label for="pa_db_user" class="invalid-feedback">{% trans %}Provide the user name{% endtrans %}</label>
                 </td>
-                <td>{% trans %}The username for Poweradmin. This new user will have limited rights only.{% endtrans %}</td>
+                <td>{% trans %}Poweradmin database username with restricted access. Not for web UI login.{% endtrans %}</td>
             </tr>
             <tr>
                 <td>{% trans %}Password{% endtrans %}</td>
