--- a/install/templates/step3.html.twig
+++ b/install/templates/step3.html.twig
@@ -101,8 +101,9 @@
                         <div class="invalid-feedback">{% trans %}Provide a password{% endtrans %}</div>
                     </div>
                 </td>
-                <td>{% trans %}The password of the Poweradmin administrator. This administrator has full rights to Poweradmin
-                    using the web interface.{% endtrans %}
+                <td>
+                    {% trans %}The password of the Poweradmin administrator. This administrator has full rights to Poweradmin using the web interface.{% endtrans %}
+                    {% trans %}The default username is "admin".{% endtrans %}
                 </td>
             </tr>
             <tbody>
