--- a/install/templates/step7.html.twig
+++ b/install/templates/step7.html.twig
@@ -8,5 +8,5 @@
     <p>{% trans %}Now we have finished the configuration.{% endtrans %}</p>
     <p>{% trans %}You should (must!) remove the directory "install/" from the Poweradmin root directory. You will not be able to use Poweradmin if it exists. Do it now.{% endtrans %}</p>
     <p>{% trans %}After you have removed the directory, you can login to <a href="../index.php">Poweradmin</a>.{% endtrans %}</p>
-    <p>{% trans %}Use the default username 'admin' and the password set in step 3.{% endtrans %}</p>
+    <p>{% trans %}Use the default username "admin" and the password set in step 3.{% endtrans %}</p>
 {% endblock %}
