--- a/templates/edit_zone_templ.html
+++ b/templates/edit_zone_templ.html
@@ -25,12 +25,12 @@
     <input type="hidden" name="_token" value="{{ csrf_token }}">
     <table class="table table-striped table-hover table-sm">
         <tr>
-            <th><a href="index.php?page=edit_zone_templ&id={{zone_templ_id}}&amp;record_sort_by=name">{% trans %}Name{% endtrans %}</a></th>
-            <th><a href="index.php?page=edit_zone_templ&id={{zone_templ_id}}&amp;record_sort_by=type">{% trans %}Type{% endtrans %}</a></th>
-            <th><a href="index.php?page=edit_zone_templ&id={{zone_templ_id}}&amp;record_sort_by=content">{% trans %}Content{% endtrans %}</a></th>
-            <th><a href="index.php?page=edit_zone_templ&id={{zone_templ_id}}&amp;record_sort_by=prio">{% trans %}Priority{% endtrans %}</a>
+            <th><a href="index.php?page=edit_zone_templ&id={{zone_templ_id}}&record_sort_by=name">{% trans %}Name{% endtrans %}</a></th>
+            <th><a href="index.php?page=edit_zone_templ&id={{zone_templ_id}}&record_sort_by=type">{% trans %}Type{% endtrans %}</a></th>
+            <th><a href="index.php?page=edit_zone_templ&id={{zone_templ_id}}&record_sort_by=content">{% trans %}Content{% endtrans %}</a></th>
+            <th><a href="index.php?page=edit_zone_templ&id={{zone_templ_id}}&record_sort_by=prio">{% trans %}Priority{% endtrans %}</a>
             </th>
-            <th><a href="index.php?page=edit_zone_templ&id={{zone_templ_id}}&amp;record_sort_by=ttl">{% trans %}TTL{% endtrans %}</a></th>
+            <th><a href="index.php?page=edit_zone_templ&id={{zone_templ_id}}&record_sort_by=ttl">{% trans %}TTL{% endtrans %}</a></th>
             <th>&nbsp;</th>
         </tr>
         {% for record in records %}
@@ -47,10 +47,10 @@
             <td>
                 <input type="hidden" name="record[{{record['id']}}][rid]" value="{{record['id']}}">
                 <a class="btn btn-outline-primary btn-sm"
-                   href="index.php?page=edit_zone_templ_record&id={{record['id']}}&amp;zone_templ_id={{zone_templ_id}}">
+                   href="index.php?page=edit_zone_templ_record&id={{record['id']}}&zone_templ_id={{zone_templ_id}}">
                     <i class="bi bi-pencil-square"></i> {% trans %}Edit{% endtrans %}</a>
                 <a class="btn btn-outline-danger btn-sm"
-                   href="index.php?page=delete_zone_templ_record&id={{record['id']}}&amp;zone_templ_id={{zone_templ_id}}">
+                   href="index.php?page=delete_zone_templ_record&id={{record['id']}}&zone_templ_id={{zone_templ_id}}">
                     <i class="bi bi-trash"></i> {% trans %}Delete{% endtrans %}</a>
             </td>
         </tr>
