--- a/templates/list_supermasters.html
+++ b/templates/list_supermasters.html
@@ -25,7 +25,7 @@
         {% if perm_sm_edit %}
         <td>
             <a class="btn btn-outline-danger btn-sm"
-               href="index.php?page=delete_supermaster&master_ip={{ server['master_ip'] }}&amp;ns_name={{ server['ns_name'] }}">
+               href="index.php?page=delete_supermaster&master_ip={{ server['master_ip'] }}&ns_name={{ server['ns_name'] }}">
                 <i class="bi bi-trash"></i> {% trans %}Delete{% endtrans %}
             </a>
         </td>
