--- a/templates/header.html
+++ b/templates/header.html
@@ -7,7 +7,7 @@
     <!-- CSS only -->
     <link href="vendor/twbs/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="vendor/twbs/bootstrap-icons/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="style/{{ iface_style }}.css?time={{ file_version }}" type="text/css">
+    <link id="theme-stylesheet" rel="stylesheet" href="style/{{ iface_style }}.css?time={{ file_version }}" type="text/css">
     <script type="text/javascript" src="assets/helper.js?time={{ file_version }}"></script>
 </head>
 <body>
