--- a/templates/add_record.html
+++ b/templates/add_record.html
@@ -37,7 +37,7 @@
             </td>
             <td>IN</td>
             <td class="col-sm-1">
-                <select class="form-select form-select-sm" name="type">
+                <select id="recordTypeSelect" class="form-select form-select-sm" name="type" onchange="updateContentInput()">
                     {% for record_type in types %}
                     {% set add = '' %}
                     {% if type == record_type %}
@@ -49,7 +49,10 @@
                     {% endfor %}
                 </select>
             </td>
-            <td><textarea class="form-control form-control-sm" name="content" rows="1" required>{{ content }}</textarea>
+            <td>
+                <div id="contentInputContainer">
+                    <input id="recordContent" class="form-control form-control-sm" type="text" name="content" value="{{ content }}" required>
+                </div>
                 <div class="invalid-feedback">{% trans %}Provide content{% endtrans %}</div>
             </td>
             <td class="col-sm-1"><input class="form-control form-control-sm" type="number" name="prio"
