--- a/templates/edit_record.html
+++ b/templates/edit_record.html
@@ -51,7 +51,7 @@
             </td>
             <td>IN</td>
             <td>
-                <select class="form-select form-select-sm" name="type">
+                <select id="recordTypeSelect" class="form-select form-select-sm" name="type" onchange="updateContentInput()">
                     {% set found_selected_type = false %}
                     {% for type_available in recordTypes %}
                     {% if type_available == record["type"] %}
@@ -68,7 +68,10 @@
                     {% endif %}
                 </select>
             </td>
-            <td><textarea class="form-control form-control-sm" name="content" rows="1" required>{{ record['content'] }}</textarea>
+            <td>
+                <div id="contentInputContainer" data-initial-value="{{ record['content'] }}">
+                    <input id="recordContent" class="form-control form-control-sm" type="text" name="content" value="{{ record['content'] }}" required>
+                </div>
                 <div class="invalid-feedback">{% trans %}Provide content{% endtrans %}</div>
             </td>
             <td><input class="form-control form-control-sm" type="number" name="prio" min="0" max="65535"
