--- a/templates/edit.html
+++ b/templates/edit.html
@@ -299,7 +299,7 @@
     <input class="btn btn-outline-secondary btn-sm" type="submit" name="commit"
            value="{% trans %}Add record{% endtrans %}">
 
-    {% if not is_reverse_zone and rev %}
+    {% if not is_reverse_zone and iface_add_reverse_record %}
     <span class="align-middle">
         &nbsp;
         <input class="form-check-input" type="checkbox" name="reverse">
