fix(forms): maintain input value during record type changes

--- a/templates/edit_record.html
+++ b/templates/edit_record.html
@@ -69,7 +69,7 @@
                 </select>
             </td>
             <td>
-                <div id="contentInputContainer" data-initial-value="{{ record['content'] }}">
+                <div id="contentInputContainer">
                     <input id="recordContent" class="form-control form-control-sm" type="text" name="content" value="{{ record['content'] }}" required>
                 </div>
                 <div class="invalid-feedback">{% trans %}Provide content{% endtrans %}</div>
