--- a/templates/users.html
+++ b/templates/users.html
@@ -18,10 +18,10 @@
             <th>{% trans %}Template{% endtrans %}</th>
 
             {% if ldap_use %}
-            <th>{% trans %}LDAP{% endtrans %}</th>
+            <th class="text-center">{% trans %}LDAP{% endtrans %}</th>
             {% endif %}
 
-            <th>{% trans %}Enabled{% endtrans %}</th>
+            <th class="text-center">{% trans %}Enabled{% endtrans %}</th>
             <th></th>
         </tr>
         </thead>
@@ -67,24 +67,24 @@
             </td>
 
             {% if ldap_use %}
-            {% if permissions['user_is_ueberuser'] %}
-            <td>
-                <input class="form-check-input" type="checkbox" name="user[{{ user['uid'] }}][use_ldap]" {{ use_ldap }} disabled>
-                <input type="hidden" name="user[{{ user['uid'] }}][use_ldap]" value="{{ user['use_ldap'] }}">
-            </td>
-            {% else %}
-            {% if use_ldap == "checked" %}
-            <td>Yes</td>
-            {% else %}
-            <td>No</td>
-            {% endif %}
-            {% endif %}
+                {% if permissions['user_is_ueberuser'] %}
+                <td class="text-center">
+                    <input class="form-check-input" type="checkbox" name="user[{{ user['uid'] }}][use_ldap]" {{ use_ldap }} disabled>
+                    <input type="hidden" name="user[{{ user['uid'] }}][use_ldap]" value="{{ user['use_ldap'] }}">
+                </td>
+                {% else %}
+                    {% if use_ldap == "checked" %}
+                    <td class="text-center">{% trans %}Yes{% endtrans %}</td>
+                    {% else %}
+                    <td class="text-center">{% trans %}No{% endtrans %}</td>
+                    {% endif %}
+                {% endif %}
             {% endif %}
 
             {% if user['uid'] != session_userid %}
-            <td><input class="form-check-input" type="checkbox" name="user[{{ user['uid'] }}][active]" {{ active }}></td>
+            <td class="text-center"><input class="form-check-input" type="checkbox" name="user[{{ user['uid'] }}][active]" {{ active }}></td>
             {% else %}
-            <td><input type="hidden" name="user[{{ user['uid'] }}][active]" value="on"></td>
+            <td class="text-center"><input type="hidden" name="user[{{ user['uid'] }}][active]" value="on">-</td>
             {% endif %}
 
             <td>
@@ -106,7 +106,8 @@
             <td>{{ user['fullname'] }}</td>
             <td>{{ user['email'] }}</td>
             <td>{{ user['tpl_name'] }}</td>
-            <td><input class="form-check-input" type="checkbox" name="user[{{ user['uid'] }}][active]" {{ active }} disabled></td>
+            <td class="text-center">{% if user['use_ldap'] %}{% trans %}Yes{% endtrans %}{% else %}{% trans %}No{% endtrans %}{% endif %}</td>
+            <td class="text-center">{% if user['active'] %}{% trans %}Yes{% endtrans %}{% else %}{% trans %}No{% endtrans %}{% endif %}</td>
             <td></td>
         </tr>
         {% endif %}
