--- a/templates/add_record.html
+++ b/templates/add_record.html
@@ -71,6 +71,13 @@
         <span class="text-secondary"> {% trans %}Add also reverse record{% endtrans %}</span>
     </span>
     {% endif %}
+    {% if is_reverse_zone and iface_add_forward_record %}
+    <span class="align-middle">
+        &nbsp;
+        <input class="form-check-input" type="checkbox" name="forward">
+        <span class="text-secondary"> {% trans %}Add also forward record{% endtrans %}</span>
+    </span>
+    {% endif %}
 </form>
 
 <script src="assets/textareaAutoResize.js?time={{ file_version }}"></script>
